# RandomAttractors.scr

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: gippidy.txt  mandelbrot.c  mandelbrot.h
src/: random_attractors.c  random_attractors.h  vec3f.c  vec3f.h
src/glsl/: compute_lines.glsl  compute_points.glsl  fragment.glsl  fragment_mesh.glsl  fragment_spot.glsl  mesh_cs.glsl  mesh_fragment.glsl  mesh_fs.glsl  mesh_tcs.glsl  mesh_tes.glsl  mesh_vertex.glsl  mesh_vs.glsl  spot_fragment.glsl  spot_fs.glsl  vertex.glsl  vertex_mesh.glsl  vertex_spot.glsl  xxxxx_compute_lines.glsl
